--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,36 @@ header {
 
     }
 }
+
+/* Nav 2 */
+
+.nav-2 {
+    padding: 1em 1em;
+    display: flex;
+    background-color: rgba(64, 91, 87, 0.461);
+    overflow: hidden;
+    gap: .5em;
+
+    input {
+        width: 100%;
+        color: white;
+        min-height: 30px;
+        background-color: rgb(34, 37, 36);
+        border: none;
+        padding-left: 10px;
+    }
+
+
+    textarea:focus,
+    input:focus {
+        outline: 0;
+    }
+
+    *:focus {
+        outline: 0;
+    }
+
+    ::placeholder {
+        color: rgb(183, 182, 182);
+
+    }
